login ,register and update added

--- a/.env
+++ b/.env
@@ -2,4 +2,10 @@
 NODE_ENV=development
 
 //database url [mongodb]
-DATABASE_URL="mongodb://localhost:27017/totaljs"
+DATABASE_URL="mongodb://localhost:27017/play_zone"
+
+//jwt secret key
+JWT_SECRET_KEY=play_zone
+
+//token expire time
+TOKEN_EXPIRE_TIME="24H"
