--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "mongoose-paginate": "^5.0.3",
     "multer": "^1.4.1",
     "nodemailer": "^5.1.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "winston": "^3.1.0"
   },
   "devDependencies": {
