authentication partial done

--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ JWT_SECRET_KEY=play_zone
 
 //token expire time
 TOKEN_EXPIRE_TIME="24H"
+
+//user avatar location in public folder
+USER_AVATAR_PATH='./public/user_avatar/'
+
+//Gmail mail
+GMAIL_USER=govindsingh3091997@gmail.com
+GMAIL_PASSWORD=gunnusingh3091997 
